--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 						<!-- Coursework -->
 							<article id="coursework">
 								<h2 class="major">Coursework</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="Object Oriented Programming in Java" /></span>
-								<p>Object Oriented Programming in Java</a>.</p>
+								<span class="image main"><img src="images/javacover.jpg" alt="Object Oriented Programming in Java" /></span>
+								<a href="https://github.com/LoopinJyoti/95712---Object-Oriented-Programming-in-Java-CMU">Object Oriented Programming in Java</a>.</p>
 								<span class="image main"><img src="images/pic02.jpg" alt="Distributed Systems" /></span>
 								<p>Distributed Systems</p>
 								<span class="image main"><img src="images/pic02.jpg" alt="Data Warehousing" /></span>
