--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 									Still learning the ropes, but eager to bring fresh ideas and a can-do attitude to your data team. <br />
 									Let's chat about how I can help turn your data challenges into opportunities!<br />
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
+										<!--<li><a href="#" class="icon brands fa-medium"><span class="label">Medium</span></a></li> -->
 										<li>
 											<a href="https://www.linkedin.com/in/jyotigvkhanchandani" class="icon brands fa-linkedin">
 												<span class="label">LinkedIn</span>
@@ -40,7 +40,7 @@
 											<a href="mailto:jyotikhanchandani@cmu.edu" class="icon solid fa-envelope">
 												<span class="label">Email</span>
 											</a>
-										</li>									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										</li>									<li><a href="https://github.com/LoopinJyoti" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
 								</p>
 							</div>
