--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 								<span class="image main"><img src="images/javacover.jpg" alt="Object Oriented Programming in Java" /></span>
 								<a href="https://github.com/LoopinJyoti/95712---Object-Oriented-Programming-in-Java-CMU">Object Oriented Programming in Java</a>.</p>
 								<span class="image main"><img src="images/pic02.jpg" alt="Distributed Systems" /></span>
-								<p>Distributed Systems</p>
-								<span class="image main"><img src="images/pic02.jpg" alt="Data Warehousing" /></span>
-								<p>Data Warehousing</p>
+								<a href="https://github.com/LoopinJyoti/95702-Distributed-Systems-CMU">Distributed Systems</a>.</p>
+								<span class="image main"><img src="images/pic02.jpg" alt="Applications of NL(X) & LLM" /></span>
+								<p>Applications of NL(X) & LLM</p>
 								<span class="image main"><img src="images/pic02.jpg" alt="Problem Solving in Python" /></span>
 								<p>Problem Solving in Python</p>
 							</article>
