--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@
 						<!-- Coursework -->
 							<article id="coursework">
 								<h2 class="major">Coursework</h2>
+								<span class="image main"><img src="images/Generative-AI-Labjpg.jpg" alt="Generative AI Lab" /></span>
+								<a href="https://github.com/LoopinJyoti/Generative-AI-Lab"><p>Generative AI Lab</p>
 								<span class="image main"><img src="images/javacover.jpg" alt="Object Oriented Programming in Java" /></span>
 								<a href="https://github.com/LoopinJyoti/95712---Object-Oriented-Programming-in-Java-CMU">Object Oriented Programming in Java</a>.</p>
-								<span class="image main"><img src="images/pic02.jpg" alt="Distributed Systems" /></span>
+								<span class="image main"><img src="images/Distributed_System.jpg" alt="Distributed Systems" /></span>
 								<a href="https://github.com/LoopinJyoti/95702-Distributed-Systems-CMU">Distributed Systems</a>.</p>
-								<span class="image main"><img src="images/pic02.jpg" alt="Applications of NL(X) & LLM" /></span>
-								<p>Applications of NL(X) & LLM</p>
+								<span class="image main"><img src="images/javacover.jpg" alt="Object Oriented Programming in Java" /></span>
+								<a href="https://github.com/LoopinJyoti/95712---Object-Oriented-Programming-in-Java-CMU">Object Oriented Programming in Java</a>.</p>
 								<span class="image main"><img src="images/pic02.jpg" alt="Problem Solving in Python" /></span>
 								<p>Problem Solving in Python</p>
 							</article>
