--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 								<h2 class="major">Coursework</h2>
 								<span class="image main"><img src="images/Generative-AI-Labjpg.jpg" alt="Generative AI Lab" /></span>
 								<a href="https://github.com/LoopinJyoti/Generative-AI-Lab"><p>Generative AI Lab</p>
+									<span class="image main"><img src="images/dataanlytics.png" alt="Data Anlytics" /></span>
+								<a href="https://github.com/LoopinJyoti/Data-Analytics-in-Python">Data Analytics in Python </a>.</p>
 								<span class="image main"><img src="images/javacover.jpg" alt="Object Oriented Programming in Java" /></span>
 								<a href="https://github.com/LoopinJyoti/95712---Object-Oriented-Programming-in-Java-CMU">Object Oriented Programming in Java</a>.</p>
 								<span class="image main"><img src="images/Distributed_System.jpg" alt="Distributed Systems" /></span>
@@ -77,18 +79,19 @@
 						<!-- Projects -->
 							<article id="projects">
 								<h2 class="major">Projects</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/dataSherlock.png" alt="Data Sherlock"/></span>
 								<p>Data Sherlock</p>
 								<p>Automates the Exploratory Data Analysis Procedure for you to focus on the important data digging</p>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Chronic Illness Trends</p>
-								<p>Attempts to tell a story regarding Chronic Illnesses in the United States and their possible causes </p>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Start-Up Success Prediction </p>
-								<p> Analyses 2 sheets on the Cruchbase dataset - Company Information & Investment Information and predicts the success of a startup with 93% accuracy </p>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Jobs In Data </p>
-								<p>Analysis of the available dataset to understand the trends in Data jobs </p>
+								<span class="image main"><img src="imagesChronicdisease-ezgif.com-crop.jpg" alt="Chronic Illness Trends" /></span>
+								<a href="https://github.com/LoopinJyoti/Telling-Story-With-Data-Using-Altair"><p>Chronic Illness Trends</p>
+								<p>Tells the story regarding Chronic Illnesses in the United States and their possible causes</p>
+								<span class="image main"><img src="images/startup.png" alt="Start-Up Success Prediction" /></span>
+								<a href="https://github.com/LoopinJyoti/StartUp-Success-Prediction"> <p>Start-Up Success Prediction </p>
+								<p> Analyses the Cruchbase dataset, specifically - Company Information & Investment Information in order to predict the success of a startup with 90% accuracy </p>
+								<span class="image main"><img src="images/jobmatching.png" alt="SkillSync: AI-Enhanced Job Matching and Conversational Search" /></span>
+								<p>SkillSync: AI-Enhanced Job Matching and Conversational Search</p>
+								<p> Fine-tune an Phi model for Conversational AI for job search, where users can ask about available jobs based on specific criteria (e.g., skills, location, salary). 
+									Fine-tuning technique used :  QLoRA.  </p>
 							</article>
 
 						<!-- Interests -->
