--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								<h2 class="major">Coursework</h2>
 								<span class="image main"><img src="images/Generative-AI-Labjpg.jpg" alt="Generative AI Lab" /></span>
 								<a href="https://github.com/LoopinJyoti/Generative-AI-Lab"><p>Generative AI Lab</p>
-									<span class="image main"><img src="images/dataanlytics.png" alt="Data Anlytics" /></span>
+									<span class="image main"><img src="images/dataanalytics.png" alt="Data Anlytics" /></span>
 								<a href="https://github.com/LoopinJyoti/Data-Analytics-in-Python">Data Analytics in Python </a>.</p>
 								<span class="image main"><img src="images/javacover.jpg" alt="Object Oriented Programming in Java" /></span>
 								<a href="https://github.com/LoopinJyoti/95712---Object-Oriented-Programming-in-Java-CMU">Object Oriented Programming in Java</a>.</p>
