--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Jyoti Khanchandani</h1>
-								<p>Hey there! Soon-to-be Carnegie Mellon grad with a passion for all things data. <br />
+								<p>Hey there! Recent Carnegie Mellon grad with a passion for all things data. <br />
 									I love digging into messy datasets, building neat pipelines, and uncovering insights that make people go "Wow!" <br />
-									Still learning the ropes, but eager to bring fresh ideas and a can-do attitude to your data team. <br />
+									Learning the ropes, but eager to bring fresh ideas and a can-do attitude to your data team. <br />
 									Let's chat about how I can help turn your data challenges into opportunities!<br />
 									<ul class="icons">
 										<!--<li><a href="#" class="icon brands fa-medium"><span class="label">Medium</span></a></li> -->
